--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "css-loader": "^0.15.1",
     "json-loader": "^0.5.2",
     "postcss-loader": "^0.5.1",
-    "random-color": "0.0.1",
+    "randomcolor": "^0.3.0",
     "react-hot-loader": "^1.2.7",
     "react-skycons": "^0.1.0",
     "style-loader": "^0.12.3",
