--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylus-loader": "^1.2.1",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^1.10.1",
+    "whatwg-fetch": "^0.9.0",
     "yeticss": "^6.0.7"
   }
 }
