--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "babel-loader": "^5.2.2",
     "css-loader": "^0.15.1",
     "json-loader": "^0.5.2",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "postcss-loader": "^0.5.1",
     "randomcolor": "^0.3.0",
     "react-hot-loader": "^1.2.7",
+    "react-number-easing": "0.0.3",
     "react-skycons": "^0.1.0",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
