--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Reactjs app using Open Weather API - http://openweathermap.org/api",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack",
-    "deploy": "npm run build && surge -p dist -d javascript.xyz"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
@@ -15,43 +14,26 @@
   "author": "Catalin Miron",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "babel": "^5.6.14",
-    "babel-core": "^5.6.15",
-    "babel-loader": "^5.2.2",
-    "css-loader": "^0.15.1",
-    "file-loader": "^0.8.4",
-    "hjs-webpack": "^2.8.1",
-    "json-loader": "^0.5.2",
-    "node-libs-browser": "^0.5.2",
-    "postcss-loader": "^0.5.1",
-    "react": "^0.13.3",
-    "react-hot-loader": "^1.2.7",
-    "style-loader": "^0.12.3",
-    "stylus-loader": "^1.2.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.10.0",
-    "webpack-dev-server": "^1.10.1",
-    "yeticss": "^6.0.7"
+    "react": "^16.13.1"
   },
   "dependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "babel": "^5.6.14",
-    "babel-loader": "^5.2.2",
-    "css-loader": "^0.15.1",
-    "json-loader": "^0.5.2",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "postcss-loader": "^0.5.1",
-    "randomcolor": "^0.3.0",
-    "react-hot-loader": "^1.2.7",
-    "react-number-easing": "0.0.3",
-    "react-skycons": "^0.1.0",
-    "style-loader": "^0.12.3",
-    "stylus-loader": "^1.2.1",
-    "url-loader": "^0.5.6",
-    "webpack-dev-server": "^1.10.1",
-    "whatwg-fetch": "^0.9.0",
-    "yeticss": "^6.0.7"
+    "moment": "^2.26.0",
+    "randomcolor": "^0.5.4",
+    "react-dom": "^16.13.1",
+    "react-number-easing": "0.0.4",
+    "react-scripts": "^3.4.1",
+    "react-skycons": "^0.7.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
